tests/baselines/reference/templateStringInFunctionParameterType.errors.txt
//// [tests/cases/conformance/es6/templates/templateStringInFunctionParameterType.ts] ////

templateStringInFunctionParameterType.ts(1,12): error TS1003: Identifier expected.


==== templateStringInFunctionParameterType.ts (1 errors) ====
    function f(`hello`);
               ~~~~~~~
!!! error TS1003: Identifier expected.
    function f(x: string);
    function f(x: string) {
        return x;
    }